# Virgo

./: .gitignore  ArgList.cpp  ArgList.h  ArgPair.cpp  ArgPair.h  ArgValPair.cpp  ArgValPair.h  Args.cpp  Args.h  Bool.cpp  Bool.h  Break.cpp  Break.h  Builtins.cpp  Builtins.h  ByteCode.cpp  ByteCode.h  CMakeLists.txt  Class.cpp  Class.h  Common.h  Context.cpp  Context.h  ContextStack.cpp  ContextStack.h  Context_.cpp  Context_.h  Err.cpp  Err.h  Error.cpp  Error.h  ErrorMessages.cpp  ErrorMessages.h  Expr.cpp  Expr.h  Expr_.cpp  Expr_.h  Fun.cpp  Fun.h  IDefObj.h  (+51 more)
Tests/: 1_arithmetics_add.v  1_arithmetics_int_const.v  3_if.v  arithmetics.v  arithmetics_int_vars.v  bubblesort.v  first.v  function.p  logics.v  test.v
tests/: arithmetics.v  bubblesort.v  first.v  for.v  if.v  list.p  logics.v
